--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^6.0.0",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
+    "http-proxy": "^1.15.1",
     "isparta-instrumenter-loader": "^1.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.0.0",
